Fix upper logo overlap

--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ body {
   display: table;
   clear: both;
   padding: 20px;
+  padding-bottom:80px;
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
@@ -118,7 +119,7 @@ img.logo {
 
 img.logo2 {
   position: absolute;
-  width: 35%;
+  width: 30%;
   top: 30%;
   bottom: 0;
   left: -15%;
